Update requirements and exclude generated CSS

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@ db.json
 /venv
 /node_modules
 /newsletter/templates/newsletter/email/newsletter.html
+/newsbetter/templates/newsbetter/static/css/custom.css
+/newsbetter/templates/newsbetter/static/css/dashboard.css
