--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ django-extensions==2.1.4
 django-inlinecss==0.1.2
 django-sass-processor==0.7.2
 feedparser==5.2.1
+gunicorn==19.9.0
 idna==2.8
 libsass==0.17.0
 lxml==4.3.0
